From ucommon 1.3.2 to 1.3.3
- further clarify asserts.

From ucommon 1.3.1 to 1.3.2
- clarified assertions for argument preconditions for correctness.

From ucommon 1.3.0 to 1.3.1
- many testing asserts added to library for function argument preconditions.

From ucommon 1.2.5 to 1.3.0
- dynamic mutex resource locking, with new interface and supporting templates
  to automate operation.  This allows one to create exclusive access regions
  on demand without having to embed initialized mutexes in each instance of
  an object that requires serialization protection.

From ucommon 1.2.4 to 1.2.5
- restore sharing level at ConditionalLock commit if recursive locked.

From ucommon 1.2.3 to 1.2.4
- default initialization of socket address list to NULL required.

From ucommon 1.2.2 to 1.2.3
- small change in use of sched.h for portability.
- unitialized mempager and reorg treemap purge.

From ucommon 1.2.1 to 1.2.2
- typo in exclusive conditional lock.

From ucommon 1.2.0 to 1.2.1
- conditional modify access can be asserted during active recursive share.

From ucommon 1.1.1 to 1.2.0
- adding conditional policies, ConditionalLock::concurrency() and
  ConditionalRW::sharing().
- Recursive support in conditional locking.
- SharedPointer derived from ConditionalRW and optimized.

From ucommon 1.1.1 to 1.1.2
- fix for OS/X.

From ucommon 1.1.0 to 1.1.1
- adjusted definition of priority scheduling and added realtime thread policies.

From ucommon 1.0.0 to 1.1.0
- fixed spec file to support uses_stdcpp definition.
- fixed new operator when using stdcpp.
- conditionalrw locking scheme integrated for scheduling optimization.

From ucommon 0.9.2 to 1.0.0
- use std::runtime_exception instead of abort when using c++ runtime library
- crit macro allows std::runtime_exception processing for c++ runtime library
- check for old and new style c++ stream i/o classes, added OLD_STDCPP
- replaced NOSTDCPP with reversed & revised NEW_STDCPP flag unless OLD_STDCPP