@@ -1,4 +1,5 @@
 From ucommon 1.3.2 to 1.3.3
+- initialization of socket hinting for BSD stack.
 - further clarify asserts.
 
 From ucommon 1.3.1 to 1.3.2
